[gd_scene load_steps=8 format=2]

[ext_resource path="res://SinglePlayerScene/ResultScreen.gd" type="Script" id=1]
[ext_resource path="res://SinglePlayerScene/AcceptButton.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 0, 1 )

[node name="ResultScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1240.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HeaderContainer"]
margin_left = 581.0
margin_top = 27.0
margin_right = 658.0
margin_bottom = 52.0
text = "Results"

[node name="PlayerStats" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 1240.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player1" type="HBoxContainer" parent="VBoxContainer/PlayerStats"]
margin_right = 1240.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="placement" type="Label" parent="VBoxContainer/PlayerStats/Player1"]
margin_right = 80.0
margin_bottom = 120.0
rect_min_size = Vector2( 80, 0 )
size_flags_vertical = 3
text = " "
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/PlayerStats/Player1"]
margin_left = 88.0
margin_right = 208.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 3
text = "Player 1"
valign = 1

[node name="P1Bar" type="ProgressBar" parent="VBoxContainer/PlayerStats/Player1"]
margin_left = 216.0
margin_right = 1240.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
max_value = 2000.0
value = 2000.0

[node name="Player2" type="HBoxContainer" parent="VBoxContainer/PlayerStats"]
margin_top = 128.0
margin_right = 1240.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="placement" type="Label" parent="VBoxContainer/PlayerStats/Player2"]
margin_right = 80.0
margin_bottom = 120.0
rect_min_size = Vector2( 80, 0 )
size_flags_vertical = 3
text = " "
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/PlayerStats/Player2"]
margin_left = 88.0
margin_right = 208.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 3
text = "Player 2"
valign = 1

[node name="P2Bar" type="ProgressBar" parent="VBoxContainer/PlayerStats/Player2"]
margin_left = 216.0
margin_right = 1240.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
max_value = 2000.0
value = 2000.0

[node name="Player3" type="HBoxContainer" parent="VBoxContainer/PlayerStats"]
margin_top = 256.0
margin_right = 1240.0
margin_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="placement" type="Label" parent="VBoxContainer/PlayerStats/Player3"]
margin_right = 80.0
margin_bottom = 120.0
rect_min_size = Vector2( 80, 0 )
size_flags_vertical = 3
text = " "
align = 1
valign = 1

[node name="Label3" type="Label" parent="VBoxContainer/PlayerStats/Player3"]
margin_left = 88.0
margin_right = 208.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 3
text = "Player 3"
valign = 1

[node name="P3Bar" type="ProgressBar" parent="VBoxContainer/PlayerStats/Player3"]
margin_left = 216.0
margin_right = 1240.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
max_value = 2000.0
value = 2000.0

[node name="Player4" type="HBoxContainer" parent="VBoxContainer/PlayerStats"]
margin_top = 384.0
margin_right = 1240.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="placement" type="Label" parent="VBoxContainer/PlayerStats/Player4"]
margin_right = 80.0
margin_bottom = 120.0
rect_min_size = Vector2( 80, 0 )
size_flags_vertical = 3
text = " "
align = 1
valign = 1

[node name="Label4" type="Label" parent="VBoxContainer/PlayerStats/Player4"]
margin_left = 88.0
margin_right = 208.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 3
text = "Player 4"
valign = 1

[node name="P4Bar" type="ProgressBar" parent="VBoxContainer/PlayerStats/Player4"]
margin_left = 216.0
margin_right = 1240.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
max_value = 2000.0
value = 2000.0

[node name="ControlPanel" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 600.0
margin_right = 1240.0
margin_bottom = 680.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ControlPanel"]
margin_right = 1240.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AcceptButton" type="Button" parent="VBoxContainer/ControlPanel/CenterContainer"]
visible = false
margin_left = 500.0
margin_top = 21.0
margin_right = 740.0
margin_bottom = 58.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Accept"
script = ExtResource( 2 )
[connection signal="pressed" from="VBoxContainer/ControlPanel/CenterContainer/AcceptButton" to="VBoxContainer/ControlPanel/CenterContainer/AcceptButton" method="_on_AcceptButton_pressed"]
